# unittest_01

./: LICENSE  Makefile  README.md  foo.py  pyproject.toml
.undodir/: %home%mpenning%fixme%unittest_01%foo.py  %home%mpenning%fixme%unittest_01%my_module%things.py  %home%mpenning%fixme%unittest_01%my_module_01%this.py  %home%mpenning%fixme%unittest_01%tests%test_foo.py
my_module/: things.py
my_module/.undodir/: %home%mpenning%fixme%unittest_01%my_module%things.py
tests/: test_config.ini  test_foo.py
tests/.undodir/: %home%mpenning%fixme%unittest_01%tests%test_foo.py  %home%mpenning%fixme%unittest_01%tests%test_my_module_things.py
