# pyproject.toml format -> See PEP 621

[build-system]
# See -> PEP 517
requires = ["poetry>=1.3.2", "poetry-core>=1.4.0", "wheel>=0.38.4", "packaging>=23.0"]
build-backend = "poetry.core.masonry.api"
requires-python = ">=3.7.0"

#[project]

[tool.poetry]
name = "unittest_01"
version = "0.0.12"
description = "Demonstration of writing patchable / mocked unit test infra"
license = "MIT"
authors = [
    # Poetry only accepts a string here (no braces)
    "Mike Pennington <mike@pennington.net>",
]
maintainers = [
    # Poetry only accepts a string here (no braces)
    "Mike Pennington <mike@pennington.net>",
]
readme = "README.md"
packages = []
# See -> https://python-poetry.org/docs/pyproject/#include-and-exclude
include = [
    "my_module/",
    "tests/",
    #"dev_tools/",
    #"CHANGES.md",
    #"CONTRIBUTING.md",
    #"LICENSE",
    #"Makefile",
    #"requirements.txt",
    #"requirements-dev.txt",
    #"README_git_workflow.md"
]
exclude = [
    "coverage.json"
]
keywords = ["unittest", "patch", "mock"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
]

# Do NOT remove this... requirements.txt is not sufficient for dependencies
[tool.poetry.dependencies]
python = ">=3.7.2,<4.0.0"
toml = ">=0.10.2"

[tool.poetry.urls]
source = "https://github.com/mpenning/unittest_01"
homepage = "https://github.com/mpenning/unittest_01"
repository = "https://github.com/mpenning/unittest_01"

